style: prevent text from overflowing its line box

--- a/assets/scss/css/normalize.css
+++ b/assets/scss/css/normalize.css
@@ -75,6 +75,7 @@
   
   a {
     background-color: transparent;
+    word-wrap: break-word;
   }
   
   /**
